--- a/css-grid/grid2.css
+++ b/css-grid/grid2.css
@@ -16,6 +16,9 @@
     max-width: 1440px;
     margin: 100px auto;
     padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 30px;
  }
 
  .card{
@@ -67,6 +70,58 @@
     color:white;
     background-image: url('./img/bg-pattern-quotation.svg');
     background-repeat: no-repeat;
-    background-position: top 10px left 30px; 
+    background-position: top 10px right 30px; 
     
 }
+
+.card--bg-gray-blue{
+   background: hsl(218, 18%, 45%);
+   color:white;
+    
+   
+}
+.card--bg-black-blue{
+   background: hsl(219, 25%, 12%);
+   color:white;
+ }
+
+.card:nth-of-type(1){
+   grid-column: 1/3;
+}
+
+.card:nth-of-type(4){
+   grid-column:2/4;
+   grid-row: 2/3;
+}
+
+.card:nth-of-type(5){
+   grid-column:4;
+   grid-row: 1/3;
+}
+
+
+ footer{
+   text-align: center;
+ }
+
+ @media(max-width:768px){
+   .testimonials{
+      grid-template-columns: 1fr;
+      width:100%
+   }
+   
+.card:nth-of-type(1){
+   grid-column: 1;
+}
+
+.card:nth-of-type(4){
+   grid-column:1;
+   grid-row: 4;
+}
+
+.card:nth-of-type(5){
+   grid-column:1;
+   grid-row: 5;
+}
+
+ }
